--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@jellyfin/sdk": "^0.10.0",
     "@types/express": "^4.17.21",
-    "express": "^4.19.2"
+    "@types/torrent-stream": "^0.0.9",
+    "express": "^4.19.2",
+    "torrent-stream": "^1.2.1"
   }
 }
